--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme ='light'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-    <main>
-        <section>
-            
-        </section>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.3/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <main class="px-12 mt-12">
+      <section>
+        <div class="navbar bg-base-100 ">
+          <div class="navbar-start">
+            <div>
+                <img src="./Group 26.png" alt="">
+            </div>
+          </div>
+          <div class="navbar-center">
+            <button class="  bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium">Sort by view</button>
+          </div>
+          <div class="navbar-end">
+            <button class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-2 rounded-lg">Blog</button>
+          </div>
+        </div>
+        <div class="border-2 mt-8"></div>
+      </section>
     </main>
-    
-</body>
+  </body>
 </html>
