--- a/question-answer.html
+++ b/question-answer.html
@@ -33,6 +33,7 @@
       </div>
       <div>
         <h2>3.What do you mean by REST API?</h2>
+        <p><span>Ans:</span></p>
       </div>
     </main>
   </body>
