--- a/question-answer.html
+++ b/question-answer.html
@@ -22,18 +22,28 @@
         </p>
       </div>
       <div>
-        <h2 class="text-4xl font-bold text-red-700 mt-4">2.Tell us the use cases of null and undefined?</h2>
+        <h2 class="text-4xl font-bold text-red-700 mt-4">
+          2.Tell us the use cases of null and undefined?
+        </h2>
         <p class="mt-4 text-2xl font-medium">
-         <span class="text-3xl font-extrabold text-green-900"> Ans:</span> null is explicitly assigned to indicate the absence of a value.
-          It's used to represent intentional absence. undefined typically
-          signifies an unintentional absence, <span class="ml-[64px]">like</span> when a variable is declared
-          but not assigned a value. Both help manage data integrity and error
-          handling in JavaScript applications.
+          <span class="text-3xl font-extrabold text-green-900"> Ans:</span> null
+          is explicitly assigned to indicate the absence of a value. It's used
+          to represent intentional absence. undefined typically signifies an
+          unintentional absence, <span class="ml-[64px]">like</span> when a
+          variable is declared but not assigned a value. Both help manage data
+          integrity and error handling in JavaScript applications.
         </p>
       </div>
       <div>
         <h2>3.What do you mean by REST API?</h2>
-        <p><span>Ans:</span></p>
+        <p>
+          <span>Ans:</span> A REST API (Representational State Transfer) is a
+          software architectural style for designing networked applications. It
+          uses HTTP requests to perform CRUD (Create, Read, Update, Delete)
+          operations on resources, employing standard HTTP methods like GET,
+          POST, PUT, DELETE. It emphasizes stateless communication and
+          resource-based interactions between clients and servers.
+        </p>
       </div>
     </main>
   </body>
