--- a/question-answer.html
+++ b/question-answer.html
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div>
-        <h2>3.What do you mean by REST API?</h2>
+        <h2  class="text-4xl font-bold text-red-700 mt-4">3.What do you mean by REST API?</h2>
         <p>
           <span>Ans:</span> A REST API (Representational State Transfer) is a
           software architectural style for designing networked applications. It
