--- a/question-answer.html
+++ b/question-answer.html
@@ -13,7 +13,7 @@
           1.Discuss the scope of var,let,and const ?
         </h2>
         <p class="mt-4 text-2xl font-medium">
-          <span class="text-3xl font-extrabold text-green-900">Ans:</span> var
+          <span class="text-3xl font-extrabold text-green-900">Ans:</span> Var
           is function-scoped, accessible throughout the function it's declared
           in. let and const are block-scoped, limited to the block they're
           defined in. let allows <span class="ml-[64px]">reassignment</span>,
@@ -26,7 +26,7 @@
           2.Tell us the use cases of null and undefined?
         </h2>
         <p class="mt-4 text-2xl font-medium">
-          <span class="text-3xl font-extrabold text-green-900"> Ans:</span> null
+          <span class="text-3xl font-extrabold text-green-900"> Ans:</span> Null
           is explicitly assigned to indicate the absence of a value. It's used
           to represent intentional absence. undefined typically signifies an
           unintentional absence, <span class="ml-[64px]">like</span> when a
@@ -36,12 +36,12 @@
       </div>
       <div>
         <h2  class="text-4xl font-bold text-red-700 mt-4">3.What do you mean by REST API?</h2>
-        <p>
-          <span>Ans:</span> A REST API (Representational State Transfer) is a
+        <p class="mt-4 text-2xl font-medium">  
+          <span class="text-3xl font-extrabold text-green-900">Ans:</span> A REST API (Representational State Transfer) is a
           software architectural style for designing networked applications. It
-          uses HTTP requests to perform CRUD (Create, Read, Update, Delete)
+          uses HTTP requests to perform CRUD <span class="ml-[64px]">(Create, Read, Update, Delete)</span>
           operations on resources, employing standard HTTP methods like GET,
-          POST, PUT, DELETE. It emphasizes stateless communication and
+          POST, PUT, DELETE. It emphasizes stateless <span class="ml-[64px]">communication</span> and
           resource-based interactions between clients and servers.
         </p>
       </div>
