--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="  bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium">Sort by view</button>
           </div>
           <div class="navbar-end">
-            <button class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-2 rounded-lg">Blog</button>
+            <a href="question-answer.html"  class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-2 rounded-lg">Blog</a>
           </div>
         </div>
         <div class="border-2 mt-8"></div>
