--- a/question-answer.html
+++ b/question-answer.html
@@ -35,14 +35,19 @@
         </p>
       </div>
       <div>
-        <h2  class="text-4xl font-bold text-red-700 mt-4">3.What do you mean by REST API?</h2>
-        <p class="mt-4 text-2xl font-medium">  
-          <span class="text-3xl font-extrabold text-green-900">Ans:</span> A REST API (Representational State Transfer) is a
-          software architectural style for designing networked applications. It
-          uses HTTP requests to perform CRUD <span class="ml-[64px]">(Create, Read, Update, Delete)</span>
+        <h2 class="text-4xl font-bold text-red-700 mt-4">
+          3.What do you mean by REST API?
+        </h2>
+        <p class="mt-4 text-2xl font-medium">
+          <span class="text-3xl font-extrabold text-green-900">Ans:</span> A
+          REST API (Representational State Transfer) is a software architectural
+          style for designing networked applications. It uses HTTP requests to
+          perform CRUD
+          <span class="ml-[64px]">(Create, Read, Update, Delete)</span>
           operations on resources, employing standard HTTP methods like GET,
-          POST, PUT, DELETE. It emphasizes stateless <span class="ml-[64px]">communication</span> and
-          resource-based interactions between clients and servers.
+          POST, PUT, DELETE. It emphasizes stateless
+          <span class="ml-[64px]">communication</span> and resource-based
+          interactions between clients and servers.
         </p>
       </div>
     </main>
