--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         </div>
         <div class="border-2 mt-8"></div>
       </section>
+      <section>
+        <div id="button-items" class="flex justify-center gap-5"></div>
+      </section>
     </main>
+
+    <script src="script/details.js"></script>
   </body>
 </html>
