--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <img src="./Group 26.png" alt="">
             </div>
           </div>
+          
           <div class="navbar-center">
             <button class="  bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium">Sort by view</button>
           </div>
@@ -30,7 +31,8 @@
         <div class="border-2 mt-8"></div>
       </section>
       <section>
-        <div id="button-items" class="flex justify-center gap-5"></div>
+        
+        <div id="button-items" class="flex justify-center gap-5 my-8 "></div>
       </section>
     </main>
 
