--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme ='light'>
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,25 +14,58 @@
   <body>
     <main class="px-12 mt-12">
       <section>
-        <div class="navbar bg-base-100 ">
+        <div class="navbar bg-base-100">
           <div class="navbar-start">
             <div>
-                <img src="./Group 26.png" alt="">
+              <img src="./Group 26.png" alt="" />
             </div>
           </div>
-          
+
           <div class="navbar-center">
-            <button class="  bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium">Sort by view</button>
+            <button
+              class="bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium"
+            >
+              Sort by view
+            </button>
           </div>
           <div class="navbar-end">
-            <a href="question-answer.html"  class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-2 rounded-lg">Blog</a>
+            <a
+              href="question-answer.html"
+              class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-2 rounded-lg"
+              >Blog</a
+            >
           </div>
         </div>
         <div class="border-2 mt-8"></div>
       </section>
       <section>
-        
         <div id="button-items" class="flex justify-center gap-5 my-8 "></div>
+      </section>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                             items-container                             -->
+      <!-- ----------------------------------------------------------------------- -->
+      <section>
+        <div id="items-container" class="grid grid-cols-4 container mx-auto gap-6">
+          <!-- <div class="card w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Shoes!
+                <div class="badge badge-secondary">NEW</div>
+              </h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-end">
+                <div class="badge badge-outline">Fashion</div>
+                <div class="badge badge-outline">Products</div>
+              </div>
+            </div>
+          </div> -->
+        </div>
       </section>
     </main>
 
