--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   </head>
   <body>
     <main class="px-12 mt-12">
-      <section>
+      <section class="">
         <div class="navbar bg-base-100">
           <div class="navbar-start">
-            <div>
+            <div class=>
               <img src="./Group 26.png" alt="" />
             </div>
           </div>
 
-          <div class="navbar-center">
+          <div class="navbar-center ">
             <button
-              class="bg-[#d3d3d3] text-black px-5 py-3 rounded-lg text-lg font-medium"
+              class="bg-[#d3d3d3] text-black   px-5 py-3 rounded-lg text-lg font-medium"
             >
               Sort by view
             </button>
@@ -39,13 +39,13 @@
         <div class="border-2 mt-8"></div>
       </section>
       <section>
-        <div id="button-items" class="flex justify-center gap-5 my-8 "></div>
+        <div id="button-items" class="flex justify-center gap-5 my-8 max-sm:grid max-sm:grid-cols-2"></div>
       </section>
       <!-- ----------------------------------------------------------------------- -->
       <!--                             items-container                             -->
       <!-- ----------------------------------------------------------------------- -->
       <section>
-        <div id="items-container" class="grid grid-cols-4 container mx-auto gap-6">
+        <div id="items-container" class="grid grid-cols-4 container mx-auto gap-6 max-sm:grid-cols-1 max-md:grid-cols-2 max-lg:grid-cols-3 ">
           <!-- <div class="card w-96 bg-base-100 shadow-xl">
             <figure>
               <img
