--- a/index.html
+++ b/index.html
@@ -19,35 +19,22 @@
             <div class="max-sm:mb-6 max-sm:grid max-sm:justify-center">
               <img src="./Group 26.png" alt="" />
             </div>
- <!-- perfect for desktop -->
- <div class=" max-sm:hidden sm:flex sm:justify-between">
-  <button
-  class="bg-[#d3d3d3] text-black  px-5 py-3 rounded-lg text-lg font-medium "
->
-  Sort by view
-</button>
-<a
-href="question-answer.html"
-class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-3 rounded-lg "
->Blog</a
->
 
-</div>          
-<div class="sm:hidden">
 
-        <!-- perfect for mobile -->
-    <div class="flex max-sm:justify-center max-sm:gap-x-10">
+<!-- perfect for mobile -->
+<!-- <div class="sm:hidden"> -->
+<div class="flex max-sm:justify-center">
       <button
-      class="bg-[#d3d3d3] text-black  px-5 py-3 rounded-lg text-lg font-medium "
+      class="bg-[#d3d3d3] text-black  px-5 py-3 rounded-lg text-lg font-medium max-sm:w-4/6 max-sm:mb-4 "
     >
       Sort by view
     </button>
-    <a
-      href="question-answer.html"
-      class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-3 rounded-lg "
-      >Blog</a
-    >
   </div>
+  <a 
+  href="question-answer.html"
+  class="text-2xl bg-[#ff1f3d] text-white font-bold px-4 py-3 rounded-lg max-sm:flex max-sm:w-4/6 max-sm:justify-center max-sm:mx-auto "
+    >Blog</a
+  >
     
 </div>
           </div>
