--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="border-2 mt-8"></div>
       </section>
       <section>
-        <div id="button-items" class="flex justify-center gap-5 my-8 max-sm:grid max-sm:grid-cols-2"></div>
+        <div id="button-items" class="flex justify-center gap-5 my-8 max-sm:grid max-sm:grid-cols-2  max-sm:text-5xl"></div>
       </section>
       <!-- ----------------------------------------------------------------------- -->
       <!--                             items-container                             -->
       <!-- ----------------------------------------------------------------------- -->
       <section>
-        <div id="items-container" class="grid grid-cols-4 container mx-auto gap-6 max-sm:grid-cols-1 max-md:grid-cols-2 max-lg:grid-cols-3 max-lg:gap-x-8 ">
+        <div id="items-container" class="grid grid-cols-4 container mx-auto gap-6 max-sm:grid-cols-1 max-md:grid-cols-2 max-lg:grid-cols-3 max-xl:grid-cols-3 ">
          
         </div>
       </section>
