--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- perfect for mobile -->
 
 <div class="flex max-sm:justify-center">
-      <button  id="sort-by-view"
+      <button id="sort-button"
       class="bg-[#d3d3d3] text-black px-8 rounded-lg text-xl font-medium max-sm:w-4/6 max-sm:mb-4 "
     >
       Sort by view
