--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="flex max-sm:justify-center">
       <button  id="sort-button"
-      class="bg-[#d3d3d3] text-black px-6 rounded-lg text-xl font-medium max-sm:w-4/6 max-sm:mb-4 "
+      class="bg-[#d3d3d3] text-black px-6 py-3 rounded-lg text-xl font-medium max-sm:w-4/6 max-sm:mb-4 "
     >
       Sort by view
     </button>
