--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="button-items" class="flex justify-center gap-5 my-8 max-sm:grid max-sm:grid-cols-2  max-sm:text-5xl"></div>
       </section>
       
-        <span id="loading-bar" class="loading loading-spinne flex justify-center my-12 loading-lg mx-auto hidden "></span>
+        <span id="loading-bar" class="loading loading-spinne flex justify-center my-12 loading-lg mx-auto "></span>
       
       <!-- ----------------------------------------------------------------------- -->
       <!--                             items-container                             -->
